--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ env:
   TF_INPUT: "false"
   AWS_REGION: "us-east-1"
   AWS_S3_BUCKET: "terraform-s3-state-20240"
-  AWS_DYNAMODB_TABLE: "terraform-state-lock-dynamo"
+  AWS_DYNAMODB_TABLE: "LockPrevention_table"
 
 jobs:
   terraform:
