--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Create initial Terraform state file
+        run: echo '{}' > terraform.tfstate && aws s3 cp terraform.tfstate s3://terraform-s3-state-20240/terraform.tfstate
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
@@ -34,10 +37,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: 'us-east-1'
 
       - name: Terraform Init
-        run: terraform init -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" -backend-config="key=terraform.tfstate" -backend-config="region=${{ env.AWS_REGION }}" -backend-config="dynamodb_table=${{ env.AWS_DYNAMODB_TABLE }}" -backend-config="encrypt=true"
+        run: terraform init -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" -backend-config="key=terraform.tfstate" -backend-config="dynamodb_table=${{ env.AWS_DYNAMODB_TABLE }}" -reconfigure
 
       - name: Terraform Validate
         run: terraform validate
@@ -46,5 +49,13 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve tfplan
+
+      - name: Terraform Destroy
+        if: github.event_name == 'pull_request' && github.ref == 'refs/heads/main'
+        run: terraform destroy -auto-approve
+
+      - name: Persist Terraform State
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: aws s3 cp terraform.tfstate s3://terraform-s3-state-20240/terraform.tfstate
